tests/NormalTests/paczka1/fuzzy1/71914628.err
Error in line 10: S494 A302 25,9
Error in line 20: 8lqjQT A479 354,5
Error in line 22: 8lqjQT A302 47,1
Error in line 24: tyc9ay9 S494 98,5
Error in line 33: tyc9ay9 A302 21,5
Error in line 35: S494 S494 -1,2
